--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "gulp && next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest --watch"
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@next/font": "13.1.6",
@@ -20,6 +20,7 @@
     "eslint": "8.34.0",
     "eslint-config-next": "13.1.6",
     "next": "13.1.6",
+    "next-router-mock": "^0.9.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "typescript": "4.9.5"
